--- a/pur_beurre_project/foodSearch/templates/foodSearch/index.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/index.html
@@ -43,10 +43,12 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link" href="#"> <i class="fa fa-user"></i> </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link " href="#">
+              <img src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30">
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
