--- a/pur_beurre_project/foodSearch/templates/foodSearch/index.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/index.html
@@ -23,7 +23,7 @@
   <link href="{% static 'foodSearch/vendor/magnific-popup/magnific-popup.css' %}" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
-  <link href="{% static 'foodSearch/css/creative.min.css' %}" rel="stylesheet">
+  <link href="{% static 'foodSearch/css/creative.css' %}" rel="stylesheet">
 
 </head>
 
@@ -32,8 +32,11 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="{% static 'foodSearch/img/logoPB.png' %}" alt="Logo PurBeurre"/></a>
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Pur Beurre</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img src="{% static 'foodSearch/img/logo_pur_beurre.png' %}" alt="" width="30" height="30">
+        <span>Pur Beurre</span>
+      </a>
+
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -63,30 +66,41 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Du gras, oui, mais de qualité!</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+          <h2 class="text-white-75 font-weight-light mb-5">Trouvez un produit de substitution pour ceux que vous consommez tous les jours</h2>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
     </div>
   </header>
 
-  <!-- About Section -->
-  <section class="page-section bg-primary" id="about">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
-          <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+  <section class="page-section bg-primary text-white" id="history">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Colette et Remy</h2>
+            <h3 class="">De la ratatouille aux croissants</h3>
+            <hr class="my-4">
+            <p class="mb-5">
+              Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà certainement rencontrés dans notre excellent restaurant Ratatouille.<br /><br />
+              Colette Tatou : "Nous aimons tous manger, surtout en France ! Personnellement, une baguette fraîche, du bon fromage de chèvre et un bon vin rouge me suffisent amplement. Comme tout le monde, je fais mes courses au supermarché. Mais petit à petit je me suis rendue compte, surtout lorsque nous avons ouvert le restaurant, que je pouvais remplacer les produits aseptisés que j'avais l'habitude d'acheter par de bons produits du terroir Et souvent pour le même prix !"<br /><br />
+              Remy : "Pour ma part je me rendais déjà dans bien des magasins car j'aime beaucoup me balader, surtout dans les caves et les cuisines. Je connaissais par coeur le contenu des boutiques bio (dont je raffole) ainsi que les ingrédients de tous les aliments vendus. Lorsque Colette m'a demandé si elle pouvait remplacer son Nutella matinal par un aliment plus sain, je savais tout de suite où le trouver. L'idée de Pur Beurre était née !"
+            </p></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <img style="border: ridge 5px #995109" class="bg-white" src="{% static 'foodSearch/img/colette-tatou-full-copie.png' %}" alt="" id="colette">
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <img style="border: ridge 5px #995109" class="bg-white" src="{% static 'foodSearch/img/ratatouille-portrait.png' %}" alt="" id="remy">
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
   <!-- Services Section -->
   <section class="page-section" id="services">
