--- a/pur_beurre_project/foodSearch/templates/foodSearch/index.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/index.html
@@ -116,7 +116,7 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>01 01 01 01 01</div>
+          <div>01 00 00 00 00</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
@@ -129,8 +129,9 @@
 
   <!-- Footer -->
   <footer class="bg-light py-5">
-    <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+    <div class="row">
+      <div class="col-lg-6 text-center small text-muted"><a class="d-block" href="#">Mentions légales</a></div>
+      <div class="col-lg-6 text-center small text-muted"><a class="d-block" href="#">Contacts</a></div>
     </div>
   </footer>
 
