--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'foodSearch:index' %}">
         <img src="{% static 'foodSearch/img/logo_pur_beurre.png' %}" alt="" width="30" height="30">
         <span>Pur Beurre</span>
       </a>
@@ -46,16 +46,18 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> <i class="fa fa-user"></i> </a>
+            <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user"></i> </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link " href="#">
-              <img src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30">
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link " href="#">
+                <img src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30">
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </div>
