--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -46,7 +46,11 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user"></i> </a>
+            {% if user.is_authenticated %}
+              <a class="nav-link" href="#"> <i class="fa fa-user"></i> </a>
+            {% else %}
+              <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user"></i> </a>
+            {% endif %}
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
