--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -24,6 +24,7 @@
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="{% static 'foodSearch/css/creative.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -47,19 +48,19 @@
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
-              <a class="nav-link" href="#"> <i class="fa fa-user"></i> </a>
+              <a class="nav-link" href="#"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
-              <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user"></i> </a>
+              <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% endif %}
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link " href="#">
-                <img src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30">
+                <img id="carrot" src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30">
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link" href="{% url 'logout' %}"> <i class="fa fa-sign-out fa-2x" aria-hidden="true"></i> </a>
             </li>
           {% endif %}
         </ul>
