--- a/pur_beurre_project/foodSearch/templates/registration/login.html
+++ b/pur_beurre_project/foodSearch/templates/registration/login.html
@@ -34,6 +34,11 @@
             <p><input type="submit" value="login"></p>
             <input type="hidden" name="text" value="{{ next }}">
           </form>
+          <p>
+            Vous n'avez tooujours pas de compte Pur Beurre? <br>
+            pas de panique, créez-en un :
+          </p>
+          <a href="#" class="btn">Créer un compte</a>
         </div>
       </div>
     </div>
