lien login register ok

--- a/pur_beurre_project/foodSearch/templates/registration/login.html
+++ b/pur_beurre_project/foodSearch/templates/registration/login.html
@@ -38,7 +38,7 @@
             Vous n'avez tooujours pas de compte Pur Beurre? <br>
             pas de panique, créez-en un :
           </p>
-          <a href="#" class="btn">Créer un compte</a>
+          <a class="btn btn-secondary" href="{% url 'foodSearch:register' %}" class="btn">Créer un compte</a>
         </div>
       </div>
     </div>
