--- a/pur_beurre_project/foodSearch/templates/registration/register.html
+++ b/pur_beurre_project/foodSearch/templates/registration/register.html
@@ -25,8 +25,7 @@
             <p>Saisie incorrecte</p>
             {% endif %}
 
-
-            <p>{{ form }}</p>
+            {{ form }}
 
             <p><input type="submit" value="register"></p>
             </form>
