--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -48,18 +48,18 @@
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
-              <a class="nav-link" href="#"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
+              <a class="nav-link" title="Mon compte" href="#"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
-              <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
+              <a class="nav-link" title="Me connecter" href="{% url 'login' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% endif %}
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link " href="#">
+              <a title="Mes aliments" class="nav-link " href="#">
                 <img id="carrot" src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30">
               </a>
             </li>
-            <li class="nav-item">
+            <li title="Me déconnecter" class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}"> <i class="fa fa-sign-out fa-2x" aria-hidden="true"></i> </a>
             </li>
           {% endif %}
