admin en fr + premier test index url

--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -60,7 +60,7 @@
               </a>
             </li>
             <li title="Me déconnecter" class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}"> <i class="fa fa-sign-out fa-2x" aria-hidden="true"></i> </a>
+              <a class="nav-link" href="{% url 'logout' %}"> <i class="fas fa-sign-out-alt fa-2x" aria-hidden="true"></i> </a>
             </li>
           {% endif %}
         </ul>
