--- a/pur_beurre_project/foodSearch/templates/registration/login.html
+++ b/pur_beurre_project/foodSearch/templates/registration/login.html
@@ -28,8 +28,8 @@
           <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
 
-            <p>Username: {{ form.username }}</p>
-            <p>Password: {{ form.password }}</p>
+            <p>Nom d'utilisateur: {{ form.username }}</p>
+            <p>Mot de passe: {{ form.password }}</p>
 
             <p><input type="submit" value="login"></p>
             <input type="hidden" name="text" value="{{ next }}">
