--- a/pur_beurre_project/foodSearch/templates/registration/register.html
+++ b/pur_beurre_project/foodSearch/templates/registration/register.html
@@ -20,14 +20,22 @@
 
           <form method="post" action="{% url 'foodSearch:register' %}">
             {% csrf_token %}
-
-            {% if form.errors %}
-            <p>Saisie incorrecte</p>
-            {% endif %}
-
-            {{ form }}
-
-            <p><input type="submit" value="register"></p>
+            {% for non_field_error in form.non_field.errors %}
+              <p class="help is-danger">{{ non_field_error}}</p>
+            {% endfor %}
+            {% for field in form %}
+              <div class="field">
+                <label for="{{ field.id_for_label }}" class="label mt-1">{{ field.html_name }}</label>
+                  {{ field }}
+                  {% if field.help_text %}
+                    <p class="help">{{ field.help_text }}</p>
+                  {% endif %}
+                  {% for error in field.errors %}
+                    <p class="help">{{ error }}</p>
+                  {% endfor %}
+              </div>
+            {% endfor %}
+            <button type="submit" class="btn btn-secondary mt-3">Créer mon compte</button>
             </form>
         </div>
       </div>
