--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -50,14 +50,14 @@
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
-              <a class="nav-link" title="Mon compte" href="#"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
+              <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
               <a class="nav-link" title="Me connecter" href="{% url 'login' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% endif %}
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a title="Mes aliments" class="nav-link " href="#">
+              <a title="Mes aliments" class="nav-link " href="{% url 'foodSearch:watchlist' %}">
                 <img id="carrot" src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30">
               </a>
             </li>
