--- a/pur_beurre_project/foodSearch/templates/registration/register.html
+++ b/pur_beurre_project/foodSearch/templates/registration/register.html
@@ -3,15 +3,7 @@
 
 {% block content %}
 
-<header class="titlepage">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center justify-content-center text-center">
-      <div class="col-lg-10 align-self-end">
-        <h1 class="text-uppercase text-white font-weight-bold">Créer un compte</h1>
-      </div>
-    </div>
-  </div>
-</header>
+{% include 'foodSearch/headerpages.html' with title=title %}
 
 <section class="page-section bg-primary text-white" id="history">
     <div class="container">
