couleur sections pages caramel

--- a/pur_beurre_project/foodSearch/templates/foodSearch/userpage.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/userpage.html
@@ -5,7 +5,7 @@
 
 {% include 'foodSearch/headerpages.html' with title=title %}
 
-<section class="page-section bg-primary text-white mb-5 id="history">
+<section style="background-color:#de9440;" class="page-section text-white mb-5 id="history">
   <div class="col-lg-8 mx-auto">
     <p>Nom utilisateur : {{ username }}</p>
     <p>Adresse mail : {{ email }}</p>
