--- a/pur_beurre_project/foodSearch/templates/registration/register.html
+++ b/pur_beurre_project/foodSearch/templates/registration/register.html
@@ -5,7 +5,7 @@
 
 {% include 'foodSearch/headerpages.html' with title=title %}
 
-<section class="page-section bg-primary text-white" id="history">
+<section style="background-color:#de9440;" class="page-section text-white" id="history">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 mx-auto text-center">
