--- a/pur_beurre_project/foodSearch/templates/registration/login.html
+++ b/pur_beurre_project/foodSearch/templates/registration/login.html
@@ -13,7 +13,7 @@
   </div>
 </header>
 
-<section class="page-section bg-primary text-white" id="history">
+<section style="background-color:#de9440;" class="page-section text-white" id="history">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 mx-auto text-center">
@@ -31,7 +31,7 @@
             <p>Nom d'utilisateur: {{ form.username }}</p>
             <p>Mot de passe: {{ form.password }}</p>
 
-            <p><input type="submit" value="login"></p>
+            <p><input class="btn btn-primary" type="submit" value="Se connecter"></p>
             <input type="hidden" name="text" value="{{ next }}">
           </form>
           <p>
