list contains name in search.html

--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -89,7 +89,7 @@
   <script src="{% static 'foodSearch/vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="{% static 'foodSearch/js/creative.min.js"></script>
+  <script src="{% static 'foodSearch/js/creative.js"></script>
 
 </body>
 
