--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -14,6 +14,7 @@
 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" type="text/css" href="{% static 'foodSearch/vendor/fontawesome-free/css/all.min.css' %}" />
+  <link rel="shortcut icon" href="{% static 'foodSearch/favicon/favicon.ico' %}">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
@@ -45,7 +46,8 @@
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
             <form action="{% url 'foodSearch:search' %}" method="get" accept-charset="utf-8">
-                  <input id="searchForm" class="form-control" name="query" placeholder="Chercher un produit">
+              {% csrf_token %}
+                <input id="searchForm" class="form-control" name="query" placeholder="Chercher un produit">
             </form>
           </li>
           <li class="nav-item">
@@ -89,7 +91,7 @@
   <script src="{% static 'foodSearch/vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="{% static 'foodSearch/js/creative.js"></script>
+  <script src="{% static 'foodSearch/js/creative.js' %}"></script>
 
 </body>
 
