--- a/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
+++ b/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
@@ -4584,10 +4584,10 @@ input[type="button"].btn-block {
 }
 
 .pagination {
-  display: flex;
+  /* display: flex;
   padding-left: 0;
   list-style: none;
-  border-radius: 0.25rem;
+  border-radius: 0.25rem; */
 }
 
 .page-link {
