--- a/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
+++ b/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
@@ -9748,3 +9748,14 @@ header.masthead h1 {
 #carrot{
   font-size: 2em;
 }
+
+#grade{
+  border-radius: 50%;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  text-transform: uppercase;
+  font-size: 28px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
