--- a/pur_beurre_project/foodSearch/templates/foodSearch/search.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/search.html
@@ -19,23 +19,40 @@
     {% else %}
       <div class="row">
       {% for product in result %}
-        <div class="col-lg-3 col-md-6 text-center ">
-          <div class="mt-5">
+        <div class="col-md-4 text-center mt-5">
             <a href="{{ product.url }}">
-              <img
-              class="image-color-theme" src="{{ product.image_small_url }}"
-              height="200rem" width="100rem"/>
+              <div class="img_prod" style="background-color: #e8a75d">
+                <img
+                  class="image-color-theme img-responsive" src="{{ product.image_small_url }}"
+                  height="200rem" width="100rem"/>
+              </div>
               <h3 class="h4 mb-2 text-white">{{ product.name }}</h3>
-            <h3 class="h4 mb-2 text-white">{{ product.nutrition_grade_fr }}</h3>
             </a>
+
+            {% if product.nutrition_grade_fr == 'a' %}
+              <span style="background-color: #5bac09;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% endif %}
+            {% if product.nutrition_grade_fr == 'b' %}
+              <span style="background-color: #0977ac;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% endif %}
+            {% if product.nutrition_grade_fr == 'c' %}
+              <span style="background-color: #f7e80b;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% endif %}
+            {% if product.nutrition_grade_fr == 'd' %}
+              <span style="background-color: #f7a60b;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% endif %}
+            {% if product.nutrition_grade_fr == 'e' %}
+              <span style="background-color: #f00000;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% endif %}
+
             {% if user.is_authenticated %}
             <div class="">
               <input type="checkbox" id="Sauvegarder" name="Sauvegarder">
               <label for="Sauvegarder">Sauvegarder</label>
             </div>
             {% endif %}
-          </div>
         </div>
+        {% if forloop.counter|divisibleby:3 %}<div class="clearfix"></div>{% endif %}
       {% endfor %}
       </div>
     {% endif %}
@@ -44,17 +61,17 @@
   {% if paginate %}
   <div class="pagination text-center mt-5">
           {% if result.has_previous %}
-              <a class="btn btn-secondary btn-lg disabled text-white" href="?query={{ query }}&page=1">&laquo; first</a>
-              <a class="btn btn-secondary btn-lg disabled text-white" href="?query={{ query }}&page={{ result.previous_page_number }}">previous</a>
+              <a class="btn btn-secondary btn-lg text-white" href="?query={{ query }}&page=1">&laquo; first</a>
+              <a class="btn btn-secondary btn-lg text-white" href="?query={{ query }}&page={{ result.previous_page_number }}">previous</a>
           {% endif %}
 
-          <span class="current ml-1 mr-1">
+          <span class="current mx-auto">
               Page {{ result.number }} of {{ result.paginator.num_pages }}
           </span>
 
           {% if result.has_next %}
-              <a class="btn btn-secondary btn-lg disabled text-white" href="?query={{ query }}&page={{ result.next_page_number }}">next</a>
-              <a class="btn btn-secondary btn-lg disabled text-white" href="?query={{ query }}&page={{ result.paginator.num_pages }}">last &raquo;</a>
+              <a class="btn btn-secondary btn-lg text-white" href="?query={{ query }}&page={{ result.next_page_number }}">next</a>
+              <a class="btn btn-secondary btn-lg text-white" href="?query={{ query }}&page={{ result.paginator.num_pages }}">last &raquo;</a>
           {% endif %}
   </div>
   {% endif %}
