--- a/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
@@ -4,6 +4,10 @@
 {% block content %}
 <section style="background-color:#de9440;" class="page-section text-white mb-5" id="services">
   <div class="container">
+    <div class="row text-center">
+      <div class="col-12">
+        Nom du produit: {{ product.name }}<br>Marques: {{ product.brands }} </div>
+      </div>
     <div class="row">
       <div class="col-md-4 text-center mt-5" style="text-transform: uppercase;">
         {{ product.nutrition_grade_fr }}
@@ -14,7 +18,6 @@
         sucre : {{ product.sugars_100g }}<br>
         sel :{{ product.salt_100g }}<br>
         sodium : {{ product.sodium_100g }}<br>
-
       </div>
 
     </div>
