page détail améliorée mais à revoir

--- a/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
+++ b/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
@@ -9730,7 +9730,7 @@ header.masthead h1 {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.85rem;
   font-weight: 600;
-  text-transform: uppercase;
+  text-transform: upperctitlepagease;
 }
 
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name {
