--- a/pur_beurre_project/foodSearch/templates/foodSearch/index.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/index.html
@@ -42,10 +42,10 @@
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
-            <img style="border: ridge 5px #995109" class="bg-white" src="{% static 'foodSearch/img/colette-tatou-full-copie.png' %}" alt="" id="colette">
+            <img style="border: ridge 5px #995109" class="bg-white" src="{% static 'foodSearch/img/colette-tatou-full-copie.png' %}" alt="colette" id="colette">
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <img style="border: ridge 5px #995109" class="bg-white" src="{% static 'foodSearch/img/ratatouille-portrait.png' %}" alt="" id="remy">
+            <img style="border: ridge 5px #995109" class="bg-white" src="{% static 'foodSearch/img/ratatouille-portrait.png' %}" alt="remy" id="remy">
           </div>
         </div>
       </div>
