--- a/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
@@ -2,32 +2,78 @@
 {% load static %}
 
 {% block content %}
-<section style="background-color:#de9440;" class="page-section text-white mb-5" id="services">
+<header class="" style="background-image: url({{ product.image_url }}); background-position: center center;   background-size: initial;   background-repeat: no-repeat; background-color: #345a61;">
   <div class="container">
-    <div class="row text-center">
+    <div class="row h-100 align-items-center justify-content-center text-center">
+      <div class="col-lg-10 align-self-end">
+        <h1 class="text-uppercase font-weight-bold" style="color:#c45525; background-color:rgba(52,90,97,0.6)">{{ product.name }}</h1>
+      </div>
+    </div>
+  </div>
+</header>
+
+<section style="background-color:#de9440;" class="page-section text-white" id="services">
+  <div class="container">
+
+    <div class="row text-center" style="margin-bottom: 40px;">
       <div class="col-12">
-        Nom du produit: {{ product.name }}<br>Marques: {{ product.brands }} </div>
-      </div>
-    <div class="row">
-      <div class="col-md-4 text-center mt-5" style="text-transform: uppercase;">
-        {{ product.nutrition_grade_fr }}
+        Marque(s): {{ product.brands }} </div>
       </div>
 
-      <div class="col-md-4 text-center mt-5">
-        gras saturés : {{ product.saturated_fat_100g }}<br>
-        sucre : {{ product.sugars_100g }}<br>
-        sel :{{ product.salt_100g }}<br>
-        sodium : {{ product.sodium_100g }}<br>
-      </div>
-      {% if found_categories|length_is:"0" %}
-      {% else %}
-        <div class="col-md-4 text-center mt-5">
-          {% for category in found_categories %}
-            {{ category.reference }}<br>
-          {% endfor %}
-      {% endif %}
+    <div class="row align-items-center">
+
+      <div class="col-md-5 ml-auto mr-auto mt-10 text-center" style="text-transform: uppercase;">
+        {% if product.nutrition_grade_fr == 'a' %}
+          <img src="{% static 'foodSearch/img/nutriscoreA.png' %}" alt="nutriscoreA" class="img-fluid rounded" alt="Responsive image">
+        {% endif %}
+        {% if product.nutrition_grade_fr == 'b' %}
+          <img src="{% static 'foodSearch/img/nutriscoreB.png' %}" alt="nutriscoreB" class="img-fluid rounded" alt="Responsive image">
+        {% endif %}
+        {% if product.nutrition_grade_fr == 'c' %}
+          <img src="{% static 'foodSearch/img/nutriscoreC.png' %}" alt="nutriscoreC" class="img-fluid rounded" alt="Responsive image">
+        {% endif %}
+        {% if product.nutrition_grade_fr == 'd' %}
+          <img src="{% static 'foodSearch/img/nutriscoreD.png' %}" alt="nutriscoreD" class="img-fluid rounded" alt="Responsive image">
+        {% endif %}
+        {% if product.nutrition_grade_fr == 'e' %}
+          <img src="{% static 'foodSearch/img/nutriscoreE.png' %}" alt="nutriscoreE" class="img-fluid rounded" alt="Responsive image">
+        {% endif %}
       </div>
 
+      <div class="col-md-5 ml-auto mr-auto text-center" style="background-color:rgba(52,90,97);">
+        <div class="row align-items-center">
+          <div class="col text-right">
+            gras saturés :
+          </div>
+          <div class="col text-left">
+            {{ product.saturated_fat_100g }}
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col text-right">
+            sucre :
+          </div>
+          <div class="col text-left">
+            {{ product.sugars_100g }}
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col text-right">
+            sel :
+          </div>
+          <div class="col text-left">
+            {{ product.salt_100g }}
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col text-right">
+            sodium :
+          </div>
+          <div class="col text-left">
+            {{ product.sodium_100g }}
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
