--- a/pur_beurre_project/foodSearch/templates/foodSearch/results.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/results.html
@@ -46,8 +46,8 @@
 
             {% if user.is_authenticated %}
             <div class="">
-              <input type="checkbox" id="Sauvegarder" name="Sauvegarder">
-              <label for="Sauvegarder">Sauvegarder</label>
+              <label for="favorite">Sauvegarder</label>
+              <input type="checkbox" id="favorite" name="favorite">
             </div>
             {% endif %}
         </div>
