--- a/pur_beurre_project/foodSearch/templates/foodSearch/results.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/results.html
@@ -17,39 +17,34 @@
       </div>
     {% else %}
       <div class="row">
-      {% for product in result %}
+      {% for substitute in result %}
         <div class="col-md-4 text-center mt-5">
-            <a href="/detail/{{ product.id }}/">
+            <a href="/detail/{{ substitute.id }}/">
               <div class="img_prod" style="background-color: #e8a75d">
                 <img
-                  class="image-color-theme img-responsive" src="{{ product.image_small_url }}"
+                  class="image-color-theme img-responsive" src="{{ substitute.image_small_url }}"
                   height="200rem" width="100rem"/>
               </div>
-              <h3 class="h4 mb-2 text-white">{{ product.name }}</h3>
+              <h3 class="h4 mb-2 text-white">{{ substitute.name }}</h3>
             </a>
 
-            {% if product.nutrition_grade_fr == 'a' %}
-              <span style="background-color: #5bac09;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% if substitute.nutrition_grade_fr == 'a' %}
+              <span style="background-color: #5bac09;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
             {% endif %}
-            {% if product.nutrition_grade_fr == 'b' %}
-              <span style="background-color: #0977ac;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% if substitute.nutrition_grade_fr == 'b' %}
+              <span style="background-color: #0977ac;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
             {% endif %}
-            {% if product.nutrition_grade_fr == 'c' %}
-              <span style="background-color: #f7e80b;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% if substitute.nutrition_grade_fr == 'c' %}
+              <span style="background-color: #f7e80b;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
             {% endif %}
-            {% if product.nutrition_grade_fr == 'd' %}
-              <span style="background-color: #f7a60b;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% if substitute.nutrition_grade_fr == 'd' %}
+              <span style="background-color: #f7a60b;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
             {% endif %}
-            {% if product.nutrition_grade_fr == 'e' %}
-              <span style="background-color: #f00000;" id="grade">{{ product.nutrition_grade_fr }}</span>
+            {% if substitute.nutrition_grade_fr == 'e' %}
+              <span style="background-color: #f00000;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
             {% endif %}
 
-            {% if user.is_authenticated %}
-            <div class="">
-              <label for="favorite">Sauvegarder</label>
-              <input type="checkbox" id="favorite" name="favorite">
-            </div>
-            {% endif %}
+              <a href="/save_favorite/{{ product.id }}/{{ substitute.id}}/" value="" class="text-white"><span class='fas fa-floppy-o'></span> Sauvegarder</a>
         </div>
         {% if forloop.counter|divisibleby:3 %}<div class="clearfix"></div>{% endif %}
       {% endfor %}
