--- a/pur_beurre_project/foodSearch/templates/foodSearch/results.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/results.html
@@ -18,7 +18,7 @@
     {% else %}
       <div class="row">
       {% for result in page_results %}
-        <!-- {% for substitute, favorite in result.items %}
+        {% for substitute, favorite in result.items %}
           <div class="col-md-4 text-center mt-5">
               <a href="/detail/{{ substitute.id }}/">
                 <div class="img_prod" style="background-color: #e8a75d">
@@ -54,7 +54,7 @@
 
           </div>
           {% if forloop.counter|divisibleby:3 %}<div class="clearfix"></div>{% endif %}
-        {% endfor %} -->
+        {% endfor %}
       {% endfor %}
       </div>
     {% endif %}
