nitriscore in watchlist

--- a/pur_beurre_project/foodSearch/templates/foodSearch/results.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/results.html
@@ -37,19 +37,19 @@
                 {% endif %}
 
                 {% if substitute.nutrition_grade_fr == 'a' %}
-                  <span style="background-color: #5bac09;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
+                  <span style="background-color: #5bac09;" class="grade">{{ substitute.nutrition_grade_fr }}</span>
                 {% endif %}
                 {% if substitute.nutrition_grade_fr == 'b' %}
-                  <span style="background-color: #0977ac;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
+                  <span style="background-color: #0977ac;" class="grade">{{ substitute.nutrition_grade_fr }}</span>
                 {% endif %}
                 {% if substitute.nutrition_grade_fr == 'c' %}
-                  <span style="background-color: #f7e80b;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
+                  <span style="background-color: #f7e80b;" class="grade">{{ substitute.nutrition_grade_fr }}</span>
                 {% endif %}
                 {% if substitute.nutrition_grade_fr == 'd' %}
-                  <span style="background-color: #f7a60b;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
+                  <span style="background-color: #f7a60b;" class="grade">{{ substitute.nutrition_grade_fr }}</span>
                 {% endif %}
                 {% if substitute.nutrition_grade_fr == 'e' %}
-                  <span style="background-color: #f00000;" id="grade">{{ substitute.nutrition_grade_fr }}</span>
+                  <span style="background-color: #f00000;" class="grade">{{ substitute.nutrition_grade_fr }}</span>
                 {% endif %}
 
             </div>
