--- a/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
@@ -97,5 +97,8 @@
       </div>
     </div>
   </div>
+  <div class="row justify-content-center mt-3">
+      <a class="btn btn-secondary" href="javascript:history.go(-1)" role="button">Retour</a>
+  </div>
 </section>
 {% endblock %}
