--- a/pur_beurre_project/foodSearch/templates/foodSearch/search.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/search.html
@@ -27,23 +27,23 @@
                 </div>
                 <h3 class="h4 mb-2 text-white">{{ product.name }}</h3>
               </a>
-              <a href="/detail/{{ product.id }}/">En savoir plus sur ce produit</a>
-              <a href="/results/{{ product.id }}/" class="text-white">Chercher un substitut</a><br>
+              <a href="/detail/{{ product.id }}/">En savoir plus sur ce produit</a><br>
+              <a href="/results/{{ product.id }}/" class="text-white">Chercher un substitut</a>
 
               {% if product.nutrition_grade_fr == 'a' %}
-                <span style="background-color: #5bac09;" id="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #5bac09;" class="grade">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'b' %}
-                <span style="background-color: #0977ac;" id="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #0977ac;" class="grade">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'c' %}
-                <span style="background-color: #f7e80b;" id="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #f7e80b;" class="grade">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'd' %}
-                <span style="background-color: #f7a60b;" id="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #f7a60b;" class="grade">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'e' %}
-                <span style="background-color: #f00000;" id="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #f00000;" class="grade">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
           </div>
           {% if forloop.counter|divisibleby:3 %}<div class="clearfix"></div>{% endif %}
